; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/bhndb/extr_bhndb_subr.c_bhndb_release_host_resources.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/bhndb/extr_bhndb_subr.c_bhndb_release_host_resources.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bhndb_host_resources = type { i64, %struct.bhndb_host_resources*, %struct.bhndb_host_resources*, %struct.bhndb_host_resources*, i32 }

@M_BHND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bhndb_release_host_resources(%struct.bhndb_host_resources* %0) #0 {
  %2 = alloca %struct.bhndb_host_resources*, align 8
  %3 = alloca i64, align 8
  store %struct.bhndb_host_resources* %0, %struct.bhndb_host_resources** %2, align 8
  %4 = load %struct.bhndb_host_resources*, %struct.bhndb_host_resources** %2, align 8
  %5 = getelementptr inbounds %struct.bhndb_host_resources, %struct.bhndb_host_resources* %4, i32 0, i32 4
  %6 = load i32, i32* %5, align 8
  %7 = load %struct.bhndb_host_resources*, %struct.bhndb_host_resources** %2, align 8
  %8 = getelementptr inbounds %struct.bhndb_host_resources, %struct.bhndb_host_resources* %7, i32 0, i32 2
  %9 = load %struct.bhndb_host_resources*, %struct.bhndb_host_resources** %8, align 8
  %10 = load %struct.bhndb_host_resources*, %struct.bhndb_host_resources** %2, align 8
  %11 = getelementptr inbounds %struct.bhndb_host_resources, %struct.bhndb_host_resources* %10, i32 0, i32 3
  %12 = load %struct.bhndb_host_resources*, %struct.bhndb_host_resources** %11, align 8
  %13 = call i32 @bus_release_resources(i32 %6, %struct.bhndb_host_resources* %9, %struct.bhndb_host_resources* %12)
  store i64 0, i64* %3, align 8
  br label %14

14:                                               ; preds = %27, %1
  %15 = load i64, i64* %3, align 8
  %16 = load %struct.bhndb_host_resources*, %struct.bhndb_host_resources** %2, align 8
  %17 = getelementptr inbounds %struct.bhndb_host_resources, %struct.bhndb_host_resources* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ult i64 %15, %18
  br i1 %19, label %20, label %30

20:                                               ; preds = %14
  %21 = load %struct.bhndb_host_resources*, %struct.bhndb_host_resources** %2, align 8
  %22 = getelementptr inbounds %struct.bhndb_host_resources, %struct.bhndb_host_resources* %21, i32 0, i32 1
  %23 = load %struct.bhndb_host_resources*, %struct.bhndb_host_resources** %22, align 8
  %24 = load i64, i64* %3, align 8
  %25 = getelementptr inbounds %struct.bhndb_host_resources, %struct.bhndb_host_resources* %23, i64 %24
  %26 = call i32 @bus_dma_tag_destroy(%struct.bhndb_host_resources* byval(%struct.bhndb_host_resources) align 8 %25)
  br label %27

27:                                               ; preds = %20
  %28 = load i64, i64* %3, align 8
  %29 = add i64 %28, 1
  store i64 %29, i64* %3, align 8
  br label %14

30:                                               ; preds = %14
  %31 = load %struct.bhndb_host_resources*, %struct.bhndb_host_resources** %2, align 8
  %32 = getelementptr inbounds %struct.bhndb_host_resources, %struct.bhndb_host_resources* %31, i32 0, i32 3
  %33 = load %struct.bhndb_host_resources*, %struct.bhndb_host_resources** %32, align 8
  %34 = load i32, i32* @M_BHND, align 4
  %35 = call i32 @free(%struct.bhndb_host_resources* %33, i32 %34)
  %36 = load %struct.bhndb_host_resources*, %struct.bhndb_host_resources** %2, align 8
  %37 = getelementptr inbounds %struct.bhndb_host_resources, %struct.bhndb_host_resources* %36, i32 0, i32 2
  %38 = load %struct.bhndb_host_resources*, %struct.bhndb_host_resources** %37, align 8
  %39 = load i32, i32* @M_BHND, align 4
  %40 = call i32 @free(%struct.bhndb_host_resources* %38, i32 %39)
  %41 = load %struct.bhndb_host_resources*, %struct.bhndb_host_resources** %2, align 8
  %42 = getelementptr inbounds %struct.bhndb_host_resources, %struct.bhndb_host_resources* %41, i32 0, i32 1
  %43 = load %struct.bhndb_host_resources*, %struct.bhndb_host_resources** %42, align 8
  %44 = load i32, i32* @M_BHND, align 4
  %45 = call i32 @free(%struct.bhndb_host_resources* %43, i32 %44)
  %46 = load %struct.bhndb_host_resources*, %struct.bhndb_host_resources** %2, align 8
  %47 = load i32, i32* @M_BHND, align 4
  %48 = call i32 @free(%struct.bhndb_host_resources* %46, i32 %47)
  ret void
}

declare dso_local i32 @bus_release_resources(i32, %struct.bhndb_host_resources*, %struct.bhndb_host_resources*) #1

declare dso_local i32 @bus_dma_tag_destroy(%struct.bhndb_host_resources* byval(%struct.bhndb_host_resources) align 8) #1

declare dso_local i32 @free(%struct.bhndb_host_resources*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
